MonetDB/src/modules/plain/Tests/arith.stable.out.WindowsNT
stdout of test 'arith` in directory 'src/modules/plain` itself:


# 12:41:42 >  
# 12:41:42 >  Mtimeout -timeout 60 Mserver --config=/var/tmp/manegold.GNU_64-d.30206/monet/.GNU_64-d/IRIX646.5/etc/monet.conf --debug=10 --set monet_prompt= --dbname=Tests_src_modules_plain  < arith.milM
# 12:41:42 >  

# Monet Database Server V4.3.5
# Copyright (c) 1993-2002, CWI. All rights reserved.
# compiled for mips-sgi-irix6.5/64bit; dynamically linked.
module("arith");
test_arith();
[ 2 ]
[ 5 ]
[ 5 ]
[ 2 ]
[ 2.5 ]
[ 5.4 ]
[ -2.5 ]
[ 54.0046 ]
[ -9000000000000 ]
[ 5400456789 ]
[ 5@0 ]
[ 2@0 ]
[ true ]
[ false ]
[ false ]
[ true ]
[ false ]
[ true ]
[ false ]
[ false ]
[ true ]
[ false ]
[ true ]
[ true ]
[ false ]
[ true ]
[ false ]
[ true ]
[ false ]
[ false ]
[ true ]
[ false ]
[ true ]
[ false ]
[ false ]
[ true ]
[ false ]
[ true ]
[ true ]
[ false ]
[ true ]
[ false ]
[ false ]
[ true ]
[ false ]
[ false ]
[ true ]
[ true ]
[ false ]
[ false ]
[ true ]
[ true ]
[ false ]
[ true ]
[ true ]
[ false ]
[ false ]
[ true ]
[ false ]
[ false ]
[ true ]
[ false ]
[ true ]
[ false ]
[ false ]
[ true ]
[ false ]
[ true ]
[ true ]
[ false ]
[ true ]
[ false ]
[ true ]
[ false ]
[ false ]
[ true ]
[ false ]
[ true ]
[ false ]
[ false ]
[ true ]
[ false ]
[ true ]
[ true ]
[ false ]
[ true ]
[ false ]
[ true ]
[ false ]
[ false ]
[ true ]
[ false ]
[ true ]
[ false ]
[ false ]
[ true ]
[ false ]
[ true ]
[ true ]
[ false ]
[ true ]
[ false ]
[ false ]
[ true ]
[ false ]
[ false ]
[ true ]
[ true ]
[ false ]
[ false ]
[ true ]
[ true ]
[ false ]
[ true ]
[ true ]
[ false ]
[ false ]
[ true ]
[ false ]
[ false ]
[ true ]
[ false ]
[ true ]
[ false ]
[ false ]
[ true ]
[ false ]
[ true ]
[ true ]
[ false ]
[ true ]
[ false ]
[ 7 ]
[ -3 ]
[ 10 ]
[ 0 ]
[ 4 ]
[ 0 ]
[ 4 ]
[ 1 ]
[ 7.4 ]
[ -3.4 ]
[ 10.8 ]
[ 0.37037 ]
[ 56.0046 ]
[ -52.0046 ]
[ 108.009 ]
[ 0.0370339 ]
[ 5400456791 ]
[ -5400456787 ]
[ 10800913578 ]
[ 0 ]
[ 10 ]
[ 0 ]
[ 25 ]
[ 1 ]
[ 7 ]
[ 3 ]
[ 10 ]
[ 2 ]
[ 10.4 ]
[ -0.4 ]
[ 27 ]
[ 0.925926 ]
[ 59.0046 ]
[ -49.0046 ]
[ 270.023 ]
[ 0.0925848 ]
[ 5400456794 ]
[ -5400456784 ]
[ 27002283945 ]
[ 0 ]
[ 7.5 ]
[ -2.5 ]
[ 12.5 ]
[ 0.5 ]
[ 4.5 ]
[ 0.5 ]
[ 5 ]
[ 1.25 ]
[ 7.9 ]
[ -2.9 ]
[ 13.5 ]
[ 0.462963 ]
[ 56.5046 ]
[ -51.5046 ]
[ 135.011 ]
[ 0.0462924 ]
[ 5.40046e+009 ]
[ -5.40046e+009 ]
[ 1.35011e+010 ]
[ 4.62924e-010 ]
[ 2.5 ]
[ -7.5 ]
[ -12.5 ]
[ -0.5 ]
[ -0.500001 ]
[ -4.5 ]
[ -5 ]
[ -1.25 ]
[ 2.9 ]
[ -7.9 ]
[ -13.5 ]
[ -0.462963 ]
[ 51.5046 ]
[ -56.5046 ]
[ -135.011 ]
[ -0.0462924 ]
[ 5.40046e+009 ]
[ -5.40046e+009 ]
[ -1.35011e+010 ]
[ -4.62924e-010 ]
[ -8999999999995 ]
[ -9000000000005 ]
[ -45000000000000 ]
[ -1800000000000 ]
[ -8999999999998 ]
[ -9000000000002 ]
[ -18000000000000 ]
[ -4500000000000 ]
[ -9e+012 ]
[ -9e+012 ]
[ -4.86e+013 ]
[ -1.66667e+012 ]
[ -9e+012 ]
[ -9e+012 ]
[ -4.86041e+014 ]
[ -1.66653e+011 ]
[ -8994599543211 ]
[ -9005400456789 ]
[ 3059533224668508160 ]
[ -1666 ]
[ 5 ]
[ 2 ]
[ 5.4 ]
[ 54.0046 ]
[ 5400456789 ]
[ 5 ]
[ 5 ]
[ 5.4 ]
[ 54.0046 ]
[ 5400456789 ]
[ 2 ]
[ 2 ]
[ 2.5 ]
[ -2.5 ]
[ -9000000000000 ]
!ERROR: interpret: no matching MIL operator to '+(oid, oid)'.
!MAYBE YOU MEAN:
!	+(str, any) : str
!	+(lng, dbl) : dbl
!	+(lng, flt) : dbl
!	+(lng, lng) : lng
!	+(lng, int) : lng
!	+(lng, sht) : lng
!	+(lng, chr) : lng
!	+(dbl, dbl) : dbl
!	+(dbl, flt) : dbl
!	+(dbl, lng) : dbl
!	+(dbl, int) : dbl
!	+(dbl, sht) : dbl
!	+(dbl, chr) : dbl
!	+(flt, dbl) : dbl
!	+(flt, flt) : flt
!	+(flt, lng) : flt
!	+(flt, int) : flt
!	+(flt, sht) : flt
!	+(flt, chr) : flt
!	+(int, dbl) : dbl
!	+(int, flt) : flt
!	+(int, lng) : lng
!	+(int, int) : int
!	+(int, sht) : int
!	+(int, chr) : int
!	+(sht, dbl) : dbl
!	+(sht, flt) : flt
!	+(sht, lng) : lng
!	+(sht, int) : int
!	+(sht, sht) : sht
!	+(sht, chr) : sht
!	+(chr, dbl) : dbl
!	+(chr, flt) : flt
!	+(chr, lng) : lng
!	+(chr, int) : int
!	+(chr, sht) : sht
!	+(chr, chr) : chr
!ERROR: print(param 1): evaluation error.
!ERROR: interpret: no matching MIL operator to '-(oid, oid)'.
!MAYBE YOU MEAN:
!	-(dbl) : dbl
!	-(lng) : lng
!	-(flt) : flt
!	-(int) : int
!	-(sht) : sht
!	-(chr) : chr
!	-(lng, dbl) : dbl
!	-(lng, flt) : dbl
!	-(lng, lng) : lng
!	-(lng, int) : lng
!	-(lng, sht) : lng
!	-(lng, chr) : lng
!	-(dbl, dbl) : dbl
!	-(dbl, flt) : dbl
!	-(dbl, lng) : dbl
!	-(dbl, int) : dbl
!	-(dbl, sht) : dbl
!	-(dbl, chr) : dbl
!	-(flt, dbl) : dbl
!	-(flt, flt) : flt
!	-(flt, lng) : flt
!	-(flt, int) : flt
!	-(flt, sht) : flt
!	-(flt, chr) : flt
!	-(int, dbl) : dbl
!	-(int, flt) : flt
!	-(int, lng) : lng
!	-(int, int) : int
!	-(int, sht) : int
!	-(int, chr) : int
!	-(sht, dbl) : dbl
!	-(sht, flt) : flt
!	-(sht, lng) : lng
!	-(sht, int) : int
!	-(sht, sht) : sht
!	-(sht, chr) : sht
!	-(chr, dbl) : dbl
!	-(chr, flt) : flt
!	-(chr, lng) : lng
!	-(chr, int) : int
!	-(chr, sht) : sht
!	-(chr, chr) : chr
!ERROR: print(param 1): evaluation error.
!ERROR: interpret: no matching MIL operator to '*(oid, oid)'.
!MAYBE YOU MEAN:
!	*(lng, dbl) : dbl
!	*(lng, flt) : dbl
!	*(lng, lng) : lng
!	*(lng, int) : lng
!	*(lng, sht) : lng
!	*(lng, chr) : lng
!	*(dbl, dbl) : dbl
!	*(dbl, flt) : dbl
!	*(dbl, lng) : dbl
!	*(dbl, int) : dbl
!	*(dbl, sht) : dbl
!	*(dbl, chr) : dbl
!	*(flt, dbl) : dbl
!	*(flt, flt) : flt
!	*(flt, lng) : flt
!	*(flt, int) : flt
!	*(flt, sht) : flt
!	*(flt, chr) : flt
!	*(int, dbl) : dbl
!	*(int, flt) : flt
!	*(int, lng) : lng
!	*(int, int) : int
!	*(int, sht) : int
!	*(int, chr) : int
!	*(sht, dbl) : dbl
!	*(sht, flt) : flt
!	*(sht, lng) : lng
!	*(sht, int) : int
!	*(sht, sht) : sht
!	*(sht, chr) : sht
!	*(chr, dbl) : dbl
!	*(chr, flt) : flt
!	*(chr, lng) : lng
!	*(chr, int) : int
!	*(chr, sht) : sht
!	*(chr, chr) : chr
!ERROR: print(param 1): evaluation error.
!ERROR: interpret: no matching MIL operator to '/(oid, oid)'.
!MAYBE YOU MEAN:
!	/(lng, dbl) : dbl
!	/(lng, flt) : dbl
!	/(lng, lng) : lng
!	/(lng, int) : lng
!	/(lng, sht) : lng
!	/(lng, chr) : lng
!	/(dbl, dbl) : dbl
!	/(dbl, flt) : dbl
!	/(dbl, lng) : dbl
!	/(dbl, int) : dbl
!	/(dbl, sht) : dbl
!	/(dbl, chr) : dbl
!	/(flt, dbl) : dbl
!	/(flt, flt) : flt
!	/(flt, lng) : flt
!	/(flt, int) : flt
!	/(flt, sht) : flt
!	/(flt, chr) : flt
!	/(int, dbl) : dbl
!	/(int, flt) : flt
!	/(int, lng) : lng
!	/(int, int) : int
!	/(int, sht) : int
!	/(int, chr) : int
!	/(sht, dbl) : dbl
!	/(sht, flt) : flt
!	/(sht, lng) : lng
!	/(sht, int) : int
!	/(sht, sht) : sht
!	/(sht, chr) : sht
!	/(chr, dbl) : dbl
!	/(chr, flt) : flt
!	/(chr, lng) : lng
!	/(chr, int) : int
!	/(chr, sht) : sht
!	/(chr, chr) : chr
!ERROR: print(param 1): evaluation error.
[ 5@0 ]
[ 2@0 ]
[ 0.185185 ]
[ 0.018517 ]
[ 1 ]
[ 20 ]
[ 1 ]
[ 7 ]
[ 0 ]
[ 7 ]
[ -3 ]
[ true ]
[ false ]
[ true ]
[ true ]
[ 4068 ]
quit;

# 12:50:12 >  
# 12:50:12 >  Done.
# 12:50:12 >  

